Fixed navbar misalignment issues

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -334,8 +334,6 @@ background: #A00006;
     height: 100px;
     border-radius: 50%;
     position: relative;
-    left: 120px;
-    top: -60px;
 }
 .notif-dropdown {
     position: fixed;
@@ -424,4 +422,12 @@ background: #A00006;
 #login-buttons a {
     font-size: 16px;
     font-weight: 400;
+}
+#login-name-link {
+    font-size: 28px !important;
+    font-weight: 100 !important;
+}
+#login-sign-in-link {
+    font-size: 28px !important;
+    font-weight: 100 !important;
 }
